# bp-fiedlerova-2013

./: README  README.md
formulare/: prihbph.doc  prihbph.odt  zadanibp.doc  zadanibp.odt
posudky/: .gitignore  Makefile  posudek.tex  vedouci.tex
prezentace/: prezentace.tex
prezentace/pictures/: test-ca-porovnani.pdf_tex
src/: .gitignore  Makefile  open_pro.sh  qgsconflate.pro
src/geoc/: Makefile  geoc.cpp  geoc.h  geoc.pro  geoc_global.h  mygeometryeditoroperation.h  mygeosgeom.h  vertexsnapper.cpp  vertexsnapper.h
src/geoc_cpp/: CMakeLists.txt  affinetransformation.cpp  affinetransformation.h  algorithms.txt  aligngeometryeditoroperation.cpp  aligngeometryeditoroperation.h  completeconflation.cpp  completeconflation.h  conflategeometryeditoroperation.cpp  conflategeometryeditoroperation.h  coveragealignment.cpp  coveragealignment.h  featuresnapper.cpp  featuresnapper.h  geoc.h  geoc.pro  geoc_c.cpp  geoc_c.h  geoc_cpp.pro  geocgeom.h  geometrycorrectionoperation.cpp  geometrycorrectionoperation.h  linematcher.cpp  linematcher.h  matchinggeometry.cpp  matchinggeometry.h  mycoordinatesequencefilter.cpp  mycoordinatesequencefilter.h  mygeometryeditoroperation.h  mygeosgeom.h  pointmatching.cpp  pointmatching.h  sort.h  spatialindexbuilder.cpp  spatialindexbuilder.h  triangle.cpp  triangle.h  triangulation.cpp  triangulation.h  vertexgeometryeditoroperation.cpp  (+4 more)
src/qgsconflate/: .gitignore  CMakeLists.txt  Makefile  dialog.cpp  dialog.h  dialog.ui  libqgsconflate.so.1  libqgsconflate.so.1.0.0  moc_dialog.cpp  moc_qgsconflateplugin.cpp  qgsconflate.pro  qgsconflateplugin.cpp  qgsconflateplugin.h  qgsconflateprovider.cpp  qgsconflateprovider.h  qrc_resources.cpp  resources.qrc  ui_dialog.h
src/testing/: .gitignore  Makefile  geoc_testing.pro  main.cpp  test_navod.txt  testing.sh
src/testing/sample_data/: linie.dbf  linie.shp  linie.shx  linie2.dbf  linie2.shp  linie2.shx  obce_ref.shx  obce_sub.shp  odkazy.txt  p.dbf  p.shp  p.shx  p_ref.dbf  p_ref.shp  p_ref.shx  (+10 more)
text/: .gitignore  1-uvod.tex  10-zaver.tex  2-conflation.tex  3-nastroje.tex  4-nevim.tex  4-technologie.tex  5-geoc.tex  6-plugin.tex  6-problemy.tex  7-problemy.tex  8-testovani.tex  8-vyvoj.tex  9-vyvoj.tex  9-zaver.tex  Makefile  fiedlter_bp.tex  literatura.bib  mystyle.bst  prilohy.tex  tereza-fiedlerova-bp-2013.tex  thesiscvut.sty  zkratky.tex
text/pictures/: algorithms.pdf_tex  buffer-boundary.pdf_tex  buffer-test.pdf_tex  ca-princip.pdf_tex  crossing.pdf_tex  dead-branch.pdf_tex  klasifikace.pdf_tex  protokol.pdf_tex  schema.pdf_tex  test-ca-porovnani.pdf_tex  test-ca3.pdf_tex  tin-invalid.pdf_tex  tooth.pdf_tex  vs-invalid.pdf_tex  vs-porovnani.pdf_tex  vs-princip.pdf_tex
